--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,52 @@
-/* место для вашего кода */
+.header{
+    padding: 92px 24px;
+    display: grid;
+    grid-template-columns: 444.52px 148px 450px; 
+    grid-template-rows: 105px;
+}
+
+.header__menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.header__links-list{
+    display: flex;
+    gap: 30px;
+    list-style: circle;
+}
+
+.header__links-list-item_no-bullit{
+    list-style-type:  none;
+}
+
+.header__link {
+    font-size: 18px;
+}
+
+.header__link_active{
+    text-decoration: none;
+}
+
+.header__logo-image{
+    display: block;
+    width: 148px;
+    height: 105px;
+}
+
+.address{
+    font-family: Raleway, sans-serif;
+    font-style: normal;
+    font-size: 18px;
+    display: grid;
+}
+
+.header_address{
+    justify-content: end;
+}
+
+.cover {
+    padding: 0;
+}
