--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    text-decoration-skip-ink: none;
+    text-underline-offset: 5px;
 }
 
 .header__links-list{
@@ -41,6 +42,8 @@
     font-style: normal;
     font-size: 18px;
     display: grid;
+    text-decoration-skip-ink: none;
+    text-underline-offset: 4px;
 }
 
 .header_address{
@@ -48,5 +51,88 @@
 }
 
 .cover {
-    padding: 0;
+    padding: 165px 50px 50px;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+.overlay{
+    position: absolute;
+    inset: 0;
+	background: rgb(0 0 0/0.6);
+    z-index: 1;
+}
+
+.cover__title{
+    position: relative;
+    width: 100%;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 115px;
+    letter-spacing: 30px;
+    z-index: 2;
+}
+
+.aligned-text{
+    display: block;
+}
+
+.aligned-text_center{
+    text-align: center;
+    line-height: 145px;
+}
+
+.aligned-text_right{
+    text-align: right;
+    line-height: 100px;
+}
+
+.letter-spacing-extended{
+    letter-spacing: 60px;
+}
+
+.no-letter-spacing{
+    letter-spacing: 0;
+}
+
+.cover__description{
+    margin-top: 120px;
+    margin-bottom: 0px;
+    position: relative;
+    color: #fff;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 2;
+}
+
+.cover__description-text{
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 28px;
+    word-spacing: 18px;
+}
+
+.bet-button{
+    background-color: transparent;
+    font-weight: 500;
+    font-size: 22px;
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    border: 1px solid #fff;
+    padding: 16px 41px;
+}
+
+.lots__heading{
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 46.96px;
+    text-transform: uppercase;
 }
